Updated BookingService logic, feat(booking): smarter unit assignment + proper officer tracking
                              - 🚑 Assigns ambulances by nearest first
                              - 👮 Police units now assigned properly (not 1 per station lol)
                              - 🔥 Fire units handled same way, nearest-first
                              - ✅ Supports partial assignment with clear status messages
                              - 🧠 Introduced assignedPoliceMap (stationId -> officerCount) stored as JSON
                              - 💾 Updated BookingLog entity with JSON serialization/deserialization for police map
                              - 🔄 markBookingAsCompleted now releases EXACT officer count per station
                              - 🧹 Old assignedPoliceStationIds kept for now but basically useless